--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,6 +21,14 @@ jobs:
               id: buildx
               uses: docker/setup-buildx-action@v1
 
+            - name: Create .env file
+              run: |
+                echo DB_URL=${{ secrets.DB_URL }} >> .env
+                echo DB_USER=${{ secrets.DB_USERNAME }} >> .env
+                echo DB_PASS=${{ secrets.DB_PASSWORD }} >> .env
+                echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+                echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+
             - name: Docker build and push
               run: |
                 echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
