--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,8 +31,11 @@ jobs:
 
             - name: Docker build and push
               run: |
+                export $(grep -v '^#' .env | xargs)
                 echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-                docker build --env-file .env -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} .
+                docker buildx build \
+                  $(grep -v '^#' .env | sed 's/^/--build-arg /') \
+                  -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} .
                 docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
 
     deploy:
