--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,12 +31,12 @@ jobs:
 
             - name: Docker build and push
               run: |
-                export $(grep -v '^#' .env | xargs)
-                echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-                docker buildx build \
-                  $(grep -v '^#' .env | sed 's/^/--build-arg /') \
-                  -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} .
-                docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+                  export $(grep -v '^#' .env | xargs)
+                  echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+                  docker buildx build \
+                    $(grep -v '^#' .env | sed 's/^/--build-arg /') \
+                    --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} \
+                    --push .
 
     deploy:
         needs: build
