--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,7 +35,9 @@ jobs:
                   echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
                   docker buildx build \
                     $(grep -v '^#' .env | sed 's/^/--build-arg /') \
-                    --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} \
+                    --platform linux/amd64 \
+                    --no-cache \
+                    -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} \
                     --push .
 
     deploy:
