--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,10 +31,10 @@ jobs:
 
             - name: Docker build and push
               run: |
-                  export $(grep -v '^#' .env | xargs)
                   echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
                   docker buildx build \
-                    $(grep -v '^#' .env | sed 's/^/--build-arg /') \
+                    --file Dockerfile \
+                    --build-arg ENV_FILE=.env \
                     --platform linux/amd64 \
                     --no-cache \
                     -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} \
