--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,20 +21,18 @@ jobs:
               id: buildx
               uses: docker/setup-buildx-action@v1
 
-            - name: Create .env file
-              run: |
-                echo DB_URL=${{ secrets.DB_URL }} >> .env
-                echo DB_USER=${{ secrets.DB_USERNAME }} >> .env
-                echo DB_PASS=${{ secrets.DB_PASSWORD }} >> .env
-                echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-                echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+#            - name: Create .env file
+#              run: |
+#                echo DB_URL=${{ secrets.DB_URL }} >> .env
+#                echo DB_USER=${{ secrets.DB_USERNAME }} >> .env
+#                echo DB_PASS=${{ secrets.DB_PASSWORD }} >> .env
+#                echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+#                echo DB_NAME=${{ secrets.DB_NAME }} >> .env
 
             - name: Docker build and push
               run: |
                   echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
                   docker buildx build \
-                    --file Dockerfile \
-                    --build-arg ENV_FILE=.env \
                     --platform linux/amd64 \
                     --no-cache \
                     -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} \
@@ -57,5 +55,13 @@ jobs:
                     sudo docker rm areum-server || true
                     sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} || true
                     sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
-                    sudo docker run -d --name areum-server -p 80:80 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+                    sudo docker run -d \
+                    --name areum-server \
+                    -p 80:80 \
+                    --env DB_URL=${{ secrets.DB_URL }} \
+                    --env DB_USER=${{ secrets.DB_USERNAME }} \
+                    --env DB_PASS=${{ secrets.DB_PASSWORD }} \
+                    --env DB_PORT=${{ secrets.DB_PORT }} \
+                    --env DB_NAME=${{ secrets.DB_NAME }} \
+                    -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
                     sudo docker image prune -f
