--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,8 +24,11 @@ jobs:
             - name: Docker build and push
               run: |
                 echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-                docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} .
-                docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+                docker buildx build \
+                --platform linux/amd64 \
+                --no-cache \
+                -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} \
+                --push .
 
     deploy:
         needs: build
@@ -44,5 +47,13 @@ jobs:
                     sudo docker rm areum-server || true
                     sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }} || true
                     sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
-                    sudo docker run -d --name areum-server -p 80:80 ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
+                    sudo docker run -d \
+                    --name areum-server \
+                    -p 80:80 \
+                    --env DB_URL=${{ secrets.DB_URL }} \
+                    --env DB_USER=${{ secrets.DB_USERNAME }} \
+                    --env DB_PASS=${{ secrets.DB_PASSWORD }} \
+                    --env DB_PORT=${{ secrets.DB_PORT }} \
+                    --env DB_NAME=${{ secrets.DB_NAME }} \
+                    -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
                     sudo docker image prune -f
