--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,5 +55,9 @@ jobs:
                     --env DB_PASS=${{ secrets.DB_PASSWORD }} \
                     --env DB_PORT=${{ secrets.DB_PORT }} \
                     --env DB_NAME=${{ secrets.DB_NAME }} \
+                    --env S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} \
+                    --env S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} \
+                    --env S3_BUCKET=${{ secrets.S3_BUCKET }} \
+                    --env AWS_REGION=${{ secrets.AWS_REGION }} \              
                     -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}
                     sudo docker image prune -f
