--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -61,5 +61,6 @@ jobs:
                     -e S3_BUCKET=${{ secrets.S3_BUCKET_NAME }} \
                     -e STABILITY_API_KEY=${{ secrets.STABILITY_API_KEY }} \
                     -e PATH_CONVERT_VIDEO=${{ secrets.PATH_CONVERT_VIDEO }} \
+                    --cpus="1.0" \
                     -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
                     sudo docker image prune -f
